--- a/src/dotinvietnam/assets/scss/sections/_speakers.scss
+++ b/src/dotinvietnam/assets/scss/sections/_speakers.scss
@@ -86,12 +86,11 @@
 
 	.section-speakers {
 		.section-title-with-icon {
-			justify-content: center;
 			margin: 0 0 5px;
 		}
 
 		.section-title {
-			text-align: center;
+			text-align: left;
 		}
 	}
 
