--- a/src/dotinvietnam/assets/scss/sections/_about.scss
+++ b/src/dotinvietnam/assets/scss/sections/_about.scss
@@ -17,7 +17,7 @@
 		}
 	}
 
-	.row-branding-desc{
+	.row-branding-desc {
 		margin-top: 41px;
 	}
 }
@@ -33,24 +33,16 @@
 
 @include media-breakpoint-down(sm) {
 	.section-about {
-		text-align: center;
-
 		.section-title-with-icon {
 			margin: 0 0 10px;
-			justify-content: center;
-		}
-
-		.section-title {
-			text-align: center;
 		}
 
 		.section-description {
-			text-align: center;
-			margin: 30px auto 0;
+			margin: 30px 0 0;
 		}
 
-		.event-info {
-			text-align: center;
+		.branding {
+			text-align: left;
 		}
 	}
 
