Update Project Link

--- a/src/dotinvietnam/assets/scss/components/_swiper.scss
+++ b/src/dotinvietnam/assets/scss/components/_swiper.scss
@@ -784,6 +784,22 @@
 			transform: scaleX(-1);
 		}
 	}
+
+	/*.swiper-button-disabled {
+		opacity: 0.5;
+	}*/
+
+	.fraction {
+		font-size: 14px;
+		font-weight: 500;
+		text-transform: uppercase;
+		letter-spacing: .1em;
+		color: #000;
+
+		div {
+			display: inline-block;
+		}
+	}
 }
 
 .tm-swiper--light {
