--- a/docs/assets/scss/sections/_speakers.scss
+++ b/docs/assets/scss/sections/_speakers.scss
@@ -49,8 +49,9 @@
 }
 
 .speaker-company {
+	margin: 3px 0 0;
 	display: block;
-	font-size: 20px;
+	font-size: 22px;
 	font-weight: 700;
 	text-align: right;
 }
@@ -112,7 +113,7 @@
 	}
 
 	.speaker-company {
-		font-size: 16px;
+		font-size: 18px;
 	}
 }
 
