--- a/docs/assets/scss/sections/_speakers.scss
+++ b/docs/assets/scss/sections/_speakers.scss
@@ -67,6 +67,7 @@
 	.speaker {
 		padding: 0 0 0 var(--offset);
 		margin: 0 15px 20px;
+		width: calc(var(--offset) + 350px);
 		max-width: calc(50% - 30px);
 
 		&:nth-child(2n) {
